k8s/elk-cluster/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  namespace: elk
spec:
  rules:
    - host: es.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-es-http
                port:
                  number: 9200
    - host: kb.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-kb-http
                port:
                  number: 5601
